--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Practica</title>
 </head>
 <body>
-    <h1>Desafio Numero 1</h1>
+    <h1>Entrega de Clase 2</h1>
     
 </body>
 <script src="code/script.js"></script>
